--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
     "target_dir": "E:\\workfortest\\newfile",
     "max_features": 7000,
     "custom_stopwords": "达梦\nDM\n数据库\n管理\n系统\n数据\n应用\n数字",
-    "last_keyword": "两地三中心",
-    "similarity_threshold": 0.8
+    "last_keyword": "迁移",
+    "similarity_threshold": 0.49999999999999983
 }
