--- a/config.json
+++ b/config.json
@@ -5,5 +5,5 @@
     "max_features": 7000,
     "custom_stopwords": "达梦\nDM\n数据库\n管理\n系统\n数据\n应用\n数字",
     "last_keyword": "迁移",
-    "similarity_threshold": 0.49999999999999983
+    "similarity_threshold": 0.5
 }
